Version 0.06

- Increased flexibility for setting confidence levels. Now they may be set at any numeric value from 0 through 1.

- Choice of using confidence levels for the middle simulation values or the shortest probability interval. 

	- Many thanks to Ying Liu. Code from his SPIn function is fundamental for making this possible.

- `qi` now automatically determined by `simGG`.

- Minor bug fixes and documentation updates.


Version 0.05

**Major update** to the way simPH plots simulated objects. Instead of using seperate commands for plotting objects of different sim classes it now uses the method `simGG`. 

In practical terms this means that you can now just use the command `simGG` rather than the old gg. . . commands.

Version 0.04.62 

Minor bug fix for `ci` argument.

Version 0.04.6.1

Minor change: now line drawn.


Version 0.04.6

Standardise how hazard rates are calculated.

Version 0.04.5

Made updates so that the package is compatible with data.table package version 1.8.8.

Version 0.04.4

Minor improvement to ggtvc legend

Version 0.04.3 

Minor bug fixes.

Version 0.04.2

Updated the syntax for `simcoxtvc` and `ggtvc` for hazard ratios and stratified hazard rates so that it matches the syntax for the other commands.

Other bug fixes.

Version 0.04.1

Minor bug fix for `ggspline` when `qi == 'First Difference'`.

Version 0.04

Added `coxsimSpline` and `ggspline` to simulate and plot quantities of interest for penalised splines.


Version 0.03.2

Minor bug fixes, documentation improvements for `coxsimInteract`.


Version 0.03.1

Improved error messages in `coxsimInteract` and minor documentation changes.


Version 0.03

Added `coxsimInteract` to simulate quantities of interest for linear multiplicative interactions and `gginteract` for plotting these simulations.

Also made an important fix to how `coxsimLinear` calculates hazard rates and how `gglinear` plots these simulations.

Other documentation fixes.


Version 0.02.2
